# weigjanten

./: CMakeLists.txt  func.cpp  main.cpp  test.cpp
.github/workflows/: build_main.yml  run_tests.yml
